# fragalysis-stack-ansible

./: .ansible-lint  .gitignore  CLAUDE.md  LICENSE  README.md  inventory.yaml  parameters-template-fragalysis-stack.yaml  parameters-template-ta-authenticator.yaml  parameters-template.yaml  pyproject.toml  site-fragalysis-stack.yaml  site-fragalysis-stack_shutdown.yaml  site-fragalysis-stack_update.yaml  site-fragalysis-stack_wipe.yaml  site-ta-authenticator.yaml  traefik-values.yaml  vault-client.py
.github/workflows/: lint.yaml
roles/fragalysis_stack/defaults/: main.yaml
roles/fragalysis_stack/tasks/: deploy-database.yaml  deploy-redis.yaml  deploy-stack.yaml  deploy.yaml  main.yaml  prep.yaml  shutdown-stack.yaml  shutdown.yaml  undeploy.yaml  update.yaml  wait-for-stack.yaml  wipe-stack.yaml  wipe.yaml
roles/fragalysis_stack/templates/: deployment-beat.yaml.j2  deployment-redis.yaml.j2  ingress-stack.yaml.j2  pvc-database.yaml.j2  pvc-media.yaml.j2  statefulset-database.yaml.j2  statefulset-stack.yaml.j2  statefulset-worker.yaml.j2
roles/fragalysis_stack/vars/: main.yaml  sensitive-example.vault  sensitive-template.yaml
roles/ta-authenticator/defaults/: main.yaml
roles/ta-authenticator/tasks/: deploy.yaml  main.yaml  prep.yaml  undeploy.yaml
roles/ta-authenticator/templates/: deployment.yaml.j2
roles/ta-authenticator/vars/: sensitive-example.vault  sensitive-template.yaml
